syntax = "proto3";

option go_package="cluster";

package cluster;

message AddCommand {
    message EventData {
        string type = 1;
        bytes data = 2;
        bytes metadata = 3;
        bytes causation_id = 4;
        bytes correlation_id = 5;
        int64 added_at = 6;
    }
    bytes stream = 1;
    uint32 version = 2;
    repeated EventData events = 3;
}

message ApplyLog {
    oneof Command {
        AddCommand add = 1;
    }
}