syntax = "proto3";

option go_package = "protos";

message RecordedEvent {
  bytes id = 1;
  bytes stream = 2;
  uint32 version = 3;
  string type = 4;
  bytes data = 5;
  bytes metadata = 6;
  bytes addedAt = 7;
  bytes causationId = 8;
  bytes correlationId = 9;
}